--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
     "prettier"
   ],
   "rules": {
-    "no-console": "warn",
-    "prettier/prettier": "error",
+    "no-console": "off",
+    "prettier/prettier": "error"
   }
 }
