--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.100",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^27.5.0",
     "@types/node": "^10.17.27",
@@ -22,11 +23,13 @@
     "@typescript-eslint/parser": "^5.27.1",
     "aws-cdk": "2.27.0",
     "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1152.0",
     "esbuild": "^0.14.43",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "4.6"
