--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^27.5.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^10.17.27",
     "@types/prettier": "2.6.0",
     "@types/source-map-support": "^0.5.4",
@@ -39,6 +40,7 @@
     "bcryptjs": "^2.4.3",
     "commons-validator-js": "^1.0.1668",
     "constructs": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "source-map-support": "^0.5.21"
   }
 }
