--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcryptjs": "^2.4.3",
     "commons-validator-js": "^1.0.1668",
     "constructs": "^10.0.0",
+    "cuid": "^2.1.8",
     "jsonwebtoken": "^8.5.1",
     "source-map-support": "^0.5.21"
   }
