--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "es2018"
     ],
     "strict": true,
+    "esModuleInterop": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noImplicitThis": true,
